<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Bookmark Tree</string>
    
    <string name="menuExpandAll">Expand all</string>
    <string name="menuCollapseAll">Collapse all</string>
    <string name="menuReload">Reload</string>
    <string name="menuPrefs">Preferences</string>
    <string name="menuCreate">Create \u2026</string>
    <string name="menuBackup">Backup \u2026</string>

    <string name="commonOK">OK</string>
    <string name="commonSave">Save</string>
    <string name="commonCancel">Cancel</string>
    <string name="commonEditFolder">Edit folder</string>
    <string name="commonEditBookmark">Edit bookmark</string>
    <string name="commonNewBookmark">New bookmark</string>
    <string name="commonPleaseWait">Please wait ...</string>
    <string name="commonClose">Close</string>
    <string name="commonCreate">Create</string>
    <string name="commonCreateShortcut">Create shortcut</string>
    
    <string name="prefsHintRestart">\u2192 Restart app when changed.</string>
    <string name="prefsListStyle">List style:</string>
    <string name="prefsSortLabel">Sort:</string>
    <string name="prefsKeepState">Keep folder state on app close</string>
    <string name="prefsOptimiseLabel">Optimise for Android 2.0++</string>
    <string name="prefsOptimiseHint">\u2192 Disable if layout broken. Restart when changed.</string>
    <string name="prefsSortAZ">Sort bookmarks A-Z</string>
    <string name="prefsSeparator">Internal folder separator:</string>
    <string name="prefsUpdateWithNewSep">Update all bookmarks\nwith new separator</string>
    <string name="prefsScaleIcons">Scale icons</string>
    <string name="prefsSortCaseInsensitive">Case insensitive sort</string>

    <string name="prefsGroupLayout">Layout</string>
    <string name="prefsGroupToolsAndSetup">Tools &amp; Setup</string>
    <string name="prefsGroupPresentation">Presentation</string>
    <string name="prefsGroupExtras">Extras</string>
    <string name="prefsGroupSetup">App setup</string>
    <string name="prefsGroupTools">Tools</string>
    
    <string name="prefsGroupColors">Text colors (tap to change)</string>
    <string name="prefsColorFolder">Folder title</string>
    <string name="prefsColorBookmarkTitle">Bookmark title</string>
    <string name="prefsColorBookmarkUrl">Bookmark address</string>
    
    <string name="editTitle">Title:</string>
    <string name="editUrl">URL:</string>
    <string name="editParentFolder">Parent folder:</string>
    <string name="editAddToNewFolder">Add to new folder:</string>
    <string name="editLinkDeleteFolder">Delete folder</string>
    <string name="editLinkDeleteBookmark">Delete bookmark</string>

    <string name="actionDeleteBookmark">Delete this bookmark?</string>
    <string name="actionDeleteFolderOne">Delete this folder?</string>
    <string name="actionDeleteFolderMany">Delete this folder with all {1} bookmarks?</string>
    <string name="actionSortBookmarksConfirm">Sort browser bookmarks?</string>
    <string name="actionSortBookmarksDone">Bookmark sort done</string>

    <string name="domainListStyleLarge">Large font</string>
    <string name="domainListStyleMedium">Medium I font</string>
    <string name="domainListStyleSmall">Medium II font</string>
    <string name="domainSortAlphaOverall">Alpha overall</string>
    <string name="domainSortFoldersFirst">Folders first</string>
    <string name="domainSortBookmarksFirst">Bookmarks first</string>
    
    <string name="hintEmptyUrl">URL is empty. Cannot open.</string>
    <string name="hintTitleMissing">Title is empty. Cannot save.</string>
    <string name="hintUrlMissing">URL is empty. Cannot save.</string>
    <string name="hintReloaded">Reloaded {1} bookmarks</string>
	<string name="titleColorPicker">Choose color (R/G/B)</string>

    <string name="shortcutIconScale">Icon scaling</string>
    <string name="shortcutIconPreviewLabel">Icon preview:</string>
    <string name="shortcutBackgroundColor">Background color</string>
    
</resources>
