<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="5dip"
	>

	<!-- ====================== Presentation ====================== -->

	<TextView style="@style/PrefsGroupFirst" android:text="@string/prefsGroupLayout" /> 
    
   	<TextView style="@style/PrefsHint" 
   		android:layout_span="2"
   		android:text="@string/prefsHintRestart"
   		/>

    <TableLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="@dimen/mainPadding"
	    >
	    <TableRow>
	    	<TextView style="@style/PrefsLabel" 
	    		android:text="@string/prefsListStyle" 
	    		android:layout_gravity="center_vertical"
	    		/>
	    	<Spinner android:id="@+id/prefsListStyle"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dip"
			    />
	    </TableRow>
	    <TableRow>
	    	<TextView style="@style/PrefsLabel"
	    		android:text="@string/prefsSortLabel" 
	    		android:layout_gravity="center_vertical"
	    		/>
	    	<Spinner android:id="@+id/prefsSortOption"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dip"
			    />
	    </TableRow>
    </TableLayout>

    <CheckBox style="@style/PrefsLabel"
    	android:id="@+id/prefsSortCaseInsensitive"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsSortCaseInsensitive"
	    />
	    
    <CheckBox style="@style/PrefsLabel"
    	android:id="@+id/prefsKeepState"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsKeepState"
	    />
    
	<!-- ====================== Colors ====================== -->
	
	<TextView style="@style/PrefsGroup" android:text="@string/prefsGroupColors" /> 

	<TextView style="@style/PrefsClickText" android:id="@+id/prefsColorFolder" android:text="@string/prefsColorFolder" /> 
	<TextView style="@style/PrefsClickText" android:id="@+id/prefsColorBookmarkTitle" android:text="@string/prefsColorBookmarkTitle" /> 
	<TextView style="@style/PrefsClickText" android:id="@+id/prefsColorBookmarkUrl" android:text="@string/prefsColorBookmarkUrl" /> 
	
	<!-- ====================== Extras ====================== -->
	
	<TextView style="@style/PrefsGroup" android:text="@string/prefsGroupExtras" /> 

    <CheckBox style="@style/PrefsLabel"
    	android:id="@+id/prefsOptimiseLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsOptimiseLabel"
	    />
    <CheckBox style="@style/PrefsLabel"
    	android:id="@+id/prefsScaleIcons"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsScaleIcons"
	    />
   	<TextView style="@style/PrefsHint" 
   		android:text="@string/prefsOptimiseHint"
   		/>
	    
	<!-- ====================== done ====================== -->
	<View
	    android:layout_height="15dip"
	    android:layout_width="fill_parent"
		/>
		
</LinearLayout>
